bootstrap was added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="../../public/css/style.css" type="text/css" />
-		<title>{{!-- NAME OF PROJECT --}}</title>
+		<title>Cobra </title>
 		<script src="https://code.jquery.com/jquery.js"></script>
+		{{!-- BOOTSTRAP CDN --}}
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		{{!-- JAVASCRIPT FILE GOES HERE --}}
 	</head>
 	<body>
