sample html game card

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,13 @@
 <div class="container">
 
 <h1>WELCOME TO COBRA ARCADE!!!!</h1>
+
+
+<div class="card">
+  <div class="card-body">
+      <h2>GAME NAME</h2>
+      <img src="..." alt="GAME IMG">
+      <button>PLAY</button>
+  </div>
+</div>
 </div>
