Did a little front end

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,17 @@
+<nav class="navbar navbar-dark">
+  <h1 class="navbar-brand nav-title">COBRA ARCADE</h1>
+  
+</nav>
 <div class="container">
 
-<h1>WELCOME TO COBRA ARCADE!!!!</h1>
+  <h1 class="main-title">WELCOME TO COBRA ARCADE!!!!</h1>
 
-
-<div class="card">
-  <div class="card-body">
+  <hr>
+  <div class="card">
+    <div class="card-body">
       <h2>GAME NAME</h2>
-      <img src="..." alt="GAME IMG">
+      {{!-- <img src="..." alt="GAME IMG"> --}}
       <button>PLAY</button>
+    </div>
   </div>
-</div>
 </div>
