I added soem stuff for the front end of the application

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,4 +14,12 @@
       <button>PLAY</button>
     </div>
   </div>
+  <hr>
+  <div class="card">
+    <div class="card-body">
+      <h2>GAME NAME</h2>
+      {{!-- <img src="..." alt="GAME IMG"> --}}
+      <button>PLAY</button>
+    </div>
+  </div>
 </div>
