--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,9 @@
   
 </nav>
 <div class="container">
-
-  <h1 class="main-title">WELCOME TO COBRA ARCADE!!!!</h1>
+  <div class="card">
+    <h1 class="main-title">Login?</h1>
+  </div>
 
   <hr>
   <div class="card">
