--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,9 +2,6 @@
 body {
     background-image: url("../img/bogdan-mb0sco-arcade-animate.gif");
 }
-.main-card {
-    background-color: black;
-}
 
 /* NAV BAR */
 .navbar {
@@ -18,10 +15,21 @@ body {
 .main-title {
     color: white;
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-color: black;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
+.main-card {
+    background-color: black;
+    color: white;
+}
+#user-login {
+    text-align: center;
+}
+.user-submit {
+    align-content: center;
+}
+
+
 
 /* CARDS */
 .card {
