I added the game page

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -13,7 +13,7 @@
                     <img src="../public/assets/img/flappybird1.png" alt="flappy bird">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Flappy Bird</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iure eos.
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iur eee eos.
                         </p>
                     </div>
                 </div>
