--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-dark">
   <h1 class="navbar-brand nav-title">COBRA ARCADE</h1>
-  
+
 </nav>
 <div class="container">
   <div class="main-card">
     <h1 class="main-title">WELCOME TO COBRA ARCADE!</h1>
-    <form action="/action_page.php">
+    <form id="create-user" action="/action_page.php">
       <div class="form-group" id="user-login">
         <label for="username">Username</label>
         <input type="username" class="form-control login-field" placeholder="Enter username" id="username">
@@ -17,11 +17,11 @@
       </div>
       <div class="form-group form-check" id="user-login">
         <label class="form-check-label">
-        <input class="form-check-input login-field" type="checkbox"> Remember me
-      </label>
+          <input class="form-check-input login-field" type="checkbox"> Remember me
+        </label>
       </div>
       <div id="user-login">
-      <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
   </div>
@@ -31,7 +31,6 @@
     <div class="card-body">
       <h2>Description:</h2>
       <p>Creators: </p>
-      
+
     </div>
   </div>
-  
