--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,29 +1,33 @@
 <div class="container-fluid" id="game-page-background">
     <div class="container">
-        <h1>hello</h1>
+        <h1 class="click-game">CLICK ON A GAME TO PLAY</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                {{!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> --}}
             </ol>
             <div class="carousel-inner">
                 {{!-- flappy bird --}}
                 <div class="carousel-item active">
-                    <img src="../public/assets/img/flappybird1.png" alt="flappy bird">
+                    <img class="game-img" src="../public/assets/img/flappybird1.png" alt="flappy bird">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Flappy Bird</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iur eee eos.
-                        </p>
+                        <div class="game-name-background">
+                            <h5 >Flappy Bird</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iur eee eos.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 {{!-- Snake --}}
                 <div class="carousel-item">
-                    <img src="../public/assets/img/flappybird1.png" alt="flappy bird">
+                    <img class="game-img" src="../public/assets/img/snake.png" alt="flappy bird">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Flappy Bird</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iure eos.
-                        </p>
+                        <div class="game-name-background">
+                            <h5>Snake</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iur eee eos.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 
