--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="main-card">
     <h1 class="main-title">WELCOME TO COBRA ARCADE!</h1>
-    <form action="/action_page.php">
+    <form id="create-user" action="/action_page.php">
       <div class="form-group" id="user-login">
         <label for="username">Username</label>
         <input type="username" class="form-control login-field" placeholder="Enter username" id="username">
