I added some stuff in handlebars

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -41,5 +41,25 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <hr>
+        <div class="card">
+            <h2 class="main-title">HIGHSCORES</h2>
+        </div>
+        <div class="card">
+            <div class="card-body row">
+                <div class="col-md-4">
+                    <h3>FLAPPY BIRD</h3>
+                    {{!-- HIGHSCORES GO HERE --}}
+                </div>
+                <div class="col-md-4">
+                    <h3>SNAKE</h3>
+                    {{!-- HIGHSCORES GO HERE --}}
+                </div>
+                <div class="col-md-4">
+                    <h3>SUDOKU</h3>
+                    {{!-- HIGHSCORES GO HERE --}}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
