--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<title>Cobra </title>
+		<title>Cobra Arcade</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		{{!-- BOOTSTRAP CDN --}}
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		{{!-- CDN FOR CAROUSEL --}}
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 		{{!-- JAVASCRIPT FILE GOES HERE HAVENT DONE YET --}}
 		
