--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="game-page-background">
+git <div class="container-fluid" id="game-page-background">
     <div class="container">
         <h1 class="click-game">CLICK ON A GAME TO PLAY</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
