I added the play handlebars

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,4 +1,4 @@
-git <div class="container-fluid" id="game-page-background">
+<div class="container-fluid" id="game-page-background">
     <div class="container">
         <h1 class="click-game">CLICK ON A GAME TO PLAY</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -61,14 +61,35 @@ git <div class="container-fluid" id="game-page-background">
                 <div class="col-md-4">
                     <h3>FLAPPY BIRD</h3>
                     {{!-- HIGHSCORES GO HERE --}}
+                    <ul class="list-group">
+                        <li class="list-group-item">1. </li>
+                        <li class="list-group-item">2. </li>
+                        <li class="list-group-item">3. </li>
+                        <li class="list-group-item">4. </li>
+                        <li class="list-group-item">5. </li>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <h3>COBRA</h3>
                     {{!-- HIGHSCORES GO HERE --}}
+                    <ul class="list-group">
+                        <li class="list-group-item">1. </li>
+                        <li class="list-group-item">2. </li>
+                        <li class="list-group-item">3. </li>
+                        <li class="list-group-item">4. </li>
+                        <li class="list-group-item">5. </li>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <h3>PING PONG</h3>
                     {{!-- HIGHSCORES GO HERE --}}
+                    <ul class="list-group">
+                        <li class="list-group-item">1. </li>
+                        <li class="list-group-item">2. </li>
+                        <li class="list-group-item">3. </li>
+                        <li class="list-group-item">4. </li>
+                        <li class="list-group-item">5. </li>
+                    </ul>
                 </div>
             </div>
         </div>
