--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,3 @@
-<nav class="navbar navbar-dark">
-  <h1 class="navbar-brand nav-title">COBRA ARCADE</h1>
-
-</nav>
 <div class="container">
   <div class="main-card">
     <h1 class="main-title">WELCOME TO COBRA ARCADE!</h1>
@@ -21,7 +17,7 @@
         </label>
       </div>
       <div id="user-login">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary submit-btn">Submit</button>
       </div>
     </form>
   </div>
@@ -29,10 +25,12 @@
   <hr>
   <div class="card">
     <div class="card-body">
-      <h2>Description:</h2>
-      <p>Creators: </p>
+      <h2>Description</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque excepturi quisquam labore amet maiores expedita ducimus laudantium laboriosam! Temporibus dolores expedita laborum recusandae, id tenetur veritatis ullam. Impedit optio ducimus recusandae ratione dolorem saepe libero eius sapiente, voluptatibus laudantium ea ipsa sit nulla, animi fugiat dolorum. Dolore minus beatae tempore? Itaque excepturi quisquam labore amet maiores expedita ducimus laudantium laboriosam! Temporibus dolores expedita laborum recusandae, id tenetur veritatis ullam. Impedit optio ducimus recusandae ratione dolorem saepe libero eius sapiente, voluptatibus laudantium ea ipsa sit nulla, animi fugiat dolorum. Dolore minus beatae tempore?</p> 
+      <h3>Creators</h3>
+      <p>Tim Sanders, Johnny L., Aaron Platt, Matthew Rogers, Clyde Baron Rapinan</p>
 
     </div>
   </div>
 </div>
-  </div>
+
