--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,6 +1,11 @@
 <div class="container-fluid" id="game-page-background">
     <div class="container">
-        <h1 class="click-game">CLICK ON A GAME TO PLAY</h1>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <h1 class="click-game col-md-10">CLICK ON A GAME TO PLAY</h1>
+            <button class="logout-button">LOGOUT</button>
+        </div>
+        
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -10,10 +15,10 @@
             <div class="carousel-inner">
                 {{!-- flappy bird --}}
                 <div class="carousel-item active">
-                    <img class="game-img" src="../public/assets/img/flappybird1.png" alt="flappy bird">
+                    <a href="/play"><img class="game-img" src="../public/assets/img/flappybird1.png" alt="flappy bird"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <div class="game-name-background">
-                            <h5 >Flappy Bird</h5>
+                            <h5>Flappy Bird</h5>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, id quia praesentium iur eee eos.
                             </p>
                         </div>
@@ -21,7 +26,7 @@
                 </div>
                 {{!-- Cobra --}}
                 <div class="carousel-item">
-                    <img class="game-img" src="../public/assets/img/snake.png" alt="cobra">
+                    <a href="/play"><img class="game-img" src="../public/assets/img/snake.png" alt="cobra"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <div class="game-name-background">
                             <h5>Cobra</h5>
@@ -32,7 +37,7 @@
                 </div>
                 {{!-- Ping Pong --}}
                 <div class="carousel-item">
-                    <img class="game-img" src="../public/assets/img/ping-pong.PNG" alt="ping pong">
+                     <a href="/play"><img class="game-img" src="../public/assets/img/ping-pong.PNG" alt="ping pong"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <div class="game-name-background">
                             <h5>Ping Pong</h5>
