change for merging

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
 		{{!-- CDN FOR CAROUSEL --}}
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 		{{!-- JAVASCRIPT FILE GOES HERE HAVENT DONE YET --}}
+		<script src="../../public/assets/js/users.js"></script>
 		
 		<link rel="stylesheet" type='text/css' href="../../public/assets/css/style.css"/>
 	</head>
