--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -20,7 +20,7 @@
             <div class="carousel-inner">
                 {{!-- flappy bird --}}
                 <div class="carousel-item active">
-                    <a href="/play"><img class="game-img flappy-bird-game" src="../public/assets/img/flappybird1.png"
+                    <a href="/playFlappyBird"><img class="game-img flappy-bird-game" src="../public/assets/img/flappybird1.png"
                             alt="flappy bird"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <div class="game-name-background">
@@ -31,7 +31,7 @@
                 </div>
                 {{!-- Cobra --}}
                 <div class="carousel-item">
-                    <a href="/play"><img class="game-img cobra-game" src="../public/assets/img/snake.png" alt="cobra"></a>
+                    <a href="/playCobra" class="cobra-game"><img class="game-img" src="../public/assets/img/snake.png" alt="cobra"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <div class="game-name-background">
                             <h5>Cobra</h5>
@@ -41,7 +41,7 @@
                 </div>
                 {{!-- Ping Pong --}}
                 <div class="carousel-item">
-                    <a href="/play"><img class="game-img ping-pong-game" src="../public/assets/img/ping-pong.PNG" alt="ping pong"></a>
+                    <a href="/playPingPong"><img class="game-img ping-pong-game" src="../public/assets/img/ping-pong.PNG" alt="ping pong"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <div class="game-name-background">
                             <h5>Ping Pong</h5>
