--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,15 +7,25 @@
 		{{!-- BOOTSTRAP CDN --}}
 		<script src="../../public/js/users.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" type='text/css' href="../../public/assets/css/style.css"/>
 		{{!-- CDN FOR CAROUSEL --}}
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 		{{!-- JAVASCRIPT FILE GOES HERE HAVENT DONE YET --}}
 		{{!-- <script src="../../public/assets/js/users.js"></script> --}}
 		<script src="../../public/assets/js/games.js"></script>
-		<link rel="stylesheet" type='text/css' href="../../public/assets/css/style.css"/>
+		{{!-- Cobra --}}
+		{{!-- <script src="../../games/snake/game.js"></script>
+		<link rel="stylesheet" href="../../games/snake/style.css">
+
+		{{!-- Ping Pong --}}
+		<script src="../../games/Ping_Pong/PingPong.js"></script>
+		<link rel="stylesheet" href="../../games/Ping_Pong/PingPong.css">
+
+		{{!-- flappy --}}
+		<script src="../../games/Flappy_Bird/game.js"></script> --}}
+
 	</head>
 	<body>
 		{{{ body }}}
-		<script src="../../public/assets/js/display.js"></script>
 	</body>
 </html>
