--- a/views/playFlappyBird.handlebars
+++ b/views/playFlappyBird.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
-    <h1 class="main-title">{{game_name}}</h1>
-    <iframe src="{{game_url}}" frameborder="0">
+    <h1 class="main-title">Flappy Bird</h1>
+    <iframe src="/flappy-bird" frameborder="0">
 
     </iframe>
     <table id="highScores">
