--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -3,7 +3,7 @@
         
         <div class="row">
             <div class="col-md-1"></div>
-            <h1 class="click-game col-md-10">WELCOME <span class="current-user">abc</span></h1>
+            <h1 class="click-game col-md-10">WELCOME <span class="current-user">{{username}}</span></h1>
         </div>
         <div class="row">
             <div class="col-md-1"></div>
