Combined all game files into each respective html file. Changed I frame styling.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,13 @@ body {
     background-image: url("../img/bogdan-mb0sco-arcade-animate.gif");
 }
 
+iframe {
+    background-color: white;
+    position: relative;
+    height: 650px;
+    width: 100%;
+}
+
 /* NAV BAR */
 .navbar {
     background-color: black;
