--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<title>Cobra Arcade</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		{{!-- BOOTSTRAP CDN --}}
-		<script src="../../public/js/users.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" type='text/css' href="../../public/assets/css/style.css"/>
-		{{!-- CDN FOR CAROUSEL --}}
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
-		{{!-- JAVASCRIPT FILE GOES HERE HAVENT DONE YET --}}
-		{{!-- <script src="../../public/assets/js/users.js"></script> --}}
-		<script src="../../public/assets/js/games.js"></script>
-		{{!-- Cobra --}}
-		{{!-- <script src="../../games/snake/game.js"></script>
-		<link rel="stylesheet" href="../../games/snake/style.css">
+	<title>Cobra Arcade</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	{{!-- BOOTSTRAP CDN --}}
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" type='text/css' href="../../public/assets/css/style.css" />
+	{{!-- CDN FOR CAROUSEL --}}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+	{{!-- JAVASCRIPT FILE GOES HERE HAVENT DONE YET --}}
 
-		{{!-- Ping Pong --}}
-		<script src="../../games/Ping_Pong/PingPong.js"></script>
-		<link rel="stylesheet" href="../../games/Ping_Pong/PingPong.css">
+</head>
 
-		{{!-- flappy --}}
-		<script src="../../games/Flappy_Bird/game.js"></script> --}}
+<body>
+	{{{ body }}}
+</body>
 
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
 </html>
