--- a/views/playCobra.handlebars
+++ b/views/playCobra.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="main-title">COBRA</h1>
-    <iframe src="../games/snake/snake.html" frameborder="0">
+    <iframe src="/cobra" frameborder="0">
     
 
     </iframe>
