--- a/views/playCobra.handlebars
+++ b/views/playCobra.handlebars
@@ -1,6 +1,13 @@
 <div class="container">
-    <h1 class="main-title">COBRA</h1>
-    <iframe src="/cobra" frameborder="0">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <h1 class="click-game col-md-10">COBRA</h1>
+    </div>
+    <div id="user-login">
+        <button class="backToGame-button">BACK TO GAMES</button>
+    </div>
+    {{!-- <h1 class="main-title">COBRA</h1> --}}
+    <iframe src="../games/snake/snake.html" frameborder="0">
     
 
     </iframe>
