--- a/views/playFlappyBird.handlebars
+++ b/views/playFlappyBird.handlebars
@@ -1,6 +1,12 @@
 <div class="container">
-    <h1 class="main-title">Flappy Bird</h1>
-    <iframe src="../games/Flappy_Bird/index.html" frameborder="0">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <h1 class="main-title col-md-10">FLAPPY BIRD</h1>
+    </div>
+    <div id="user-login">
+        <button class="backToGame-button">BACK TO GAMES</button>
+    </div>
+    <iframe src="../games/Flappy_Bird/index.html" frameborder="0" style="background:transparent">
 
     </iframe>
     <table id="highScores">
