--- a/views/playPingPong.handlebars
+++ b/views/playPingPong.handlebars
@@ -1,5 +1,11 @@
 <div class="container">
-    <h1 class="main-title">PING PONG</h1>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <h1 class="main-title col-md-10">PING PONG</h1>
+    </div>
+    <div id="user-login">
+        <button class="backToGame-button">BACK TO GAMES</button>
+    </div>
     <iframe src="/ping-pong" frameborder="0">
 
     </iframe>
