I fixed ping pong

--- a/views/playPingPong.handlebars
+++ b/views/playPingPong.handlebars
@@ -6,7 +6,7 @@
     <div id="user-login">
         <button class="backToGame-button">BACK TO GAMES</button>
     </div>
-    <iframe src="/ping-pong" frameborder="0">
+    <iframe src="../games/Ping_Pong/index.html" frameborder="0">
 
     </iframe>
     <table id="highScores">
