added button functionality for back to games, fixed speed on ping pong

--- a/views/playCobra.handlebars
+++ b/views/playCobra.handlebars
@@ -4,7 +4,7 @@
         <h1 class="click-game col-md-10">COBRA</h1>
     </div>
     <div id="user-login">
-        <button class="backToGame-button">BACK TO GAMES</button>
+    <button onclick="window.location.href='/games';">GO TO GAMES</button>
     </div>
     {{!-- <h1 class="main-title">COBRA</h1> --}}
     <iframe src="../games/snake/snake.html" frameborder="0">
