--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
 		<title>Cobra Arcade</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		{{!-- BOOTSTRAP CDN --}}
-		<script src="../../public/js/users.js"></script>
+		<script src="../../public/js/index.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" type='text/css' href="../../public/assets/css/style.css"/>
 		{{!-- CDN FOR CAROUSEL --}}
