added functionality to all pages

--- a/views/playFlappyBird.handlebars
+++ b/views/playFlappyBird.handlebars
@@ -4,7 +4,7 @@
         <h1 class="main-title col-md-10">FLAPPY BIRD</h1>
     </div>
     <div id="user-login">
-        <button class="backToGame-button">BACK TO GAMES</button>
+       <button onclick="window.location.href='/games';">GO TO GAMES</button>
     </div>
     <iframe src="../games/Flappy_Bird/index.html" frameborder="0" style="background:transparent">
 
