--- a/views/playPingPong.handlebars
+++ b/views/playPingPong.handlebars
@@ -4,7 +4,7 @@
         <h1 class="main-title col-md-10">PING PONG</h1>
     </div>
     <div id="user-login">
-        <button class="backToGame-button">BACK TO GAMES</button>
+       <button onclick="window.location.href='/games';">GO TO GAMES</button>
     </div>
     <iframe src="../games/Ping_Pong/index.html" frameborder="0">
 
