I added the sign up

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -46,6 +46,9 @@ iframe {
 .submit-btn {
     margin-bottom: 10px;
 }
+#sign-up-btn {
+    margin-bottom: 10px;
+}
 
 /* GAME PAGE */
 #game-page-background {
