--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -8,7 +8,9 @@
         <div class="row">
             <div class="col-md-1"></div>
             <h1 class="click-game col-md-10">CLICK ON A GAME TO PLAY</h1>
-            <button class="logout-button">LOGOUT</button>
+            <div id="user-login">
+            <button onclick="window.location.href='/';" class="logout-button">LOGOUT</button>
+            </div>
         </div>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
