--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,6 +20,9 @@
         <input type="submit" class="btn btn-primary submit-btn" value="Submit" form="create-user">
       </div>
     </form>
+    <div id="user-login">
+    <button onclick="window.location.href='/signUp';" id="sign-up-btn">SIGN UP HERE</button>
+    </div>
   </div>
 
   <hr>
@@ -28,7 +31,7 @@
       <h2>Description</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque excepturi quisquam labore amet maiores expedita ducimus laudantium laboriosam! Temporibus dolores expedita laborum recusandae, id tenetur veritatis ullam. Impedit optio ducimus recusandae ratione dolorem saepe libero eius sapiente, voluptatibus laudantium ea ipsa sit nulla, animi fugiat dolorum. Dolore minus beatae tempore? Itaque excepturi quisquam labore amet maiores expedita ducimus laudantium laboriosam! Temporibus dolores expedita laborum recusandae, id tenetur veritatis ullam. Impedit optio ducimus recusandae ratione dolorem saepe libero eius sapiente, voluptatibus laudantium ea ipsa sit nulla, animi fugiat dolorum. Dolore minus beatae tempore?</p> 
       <h3>Creators</h3>
-      <p>Tim Sanders, Johnny L., Aaron Platt, Matthew Rogers, Clyde Baron Rapinan</p>
+      <p>Tim Sanders, Johnny Lieu, Aaron Platt, Matthew Rogers, Clyde Baron Rapinan</p>
 
     </div>
   </div>
