I added more front end stuff including the description thanks to matt

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
   <div class="card">
     <div class="card-body">
       <h2>Description</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque excepturi quisquam labore amet maiores expedita ducimus laudantium laboriosam! Temporibus dolores expedita laborum recusandae, id tenetur veritatis ullam. Impedit optio ducimus recusandae ratione dolorem saepe libero eius sapiente, voluptatibus laudantium ea ipsa sit nulla, animi fugiat dolorum. Dolore minus beatae tempore? Itaque excepturi quisquam labore amet maiores expedita ducimus laudantium laboriosam! Temporibus dolores expedita laborum recusandae, id tenetur veritatis ullam. Impedit optio ducimus recusandae ratione dolorem saepe libero eius sapiente, voluptatibus laudantium ea ipsa sit nulla, animi fugiat dolorum. Dolore minus beatae tempore?</p> 
+      <p>Welcome to Cobra Arcade! Our hope is that you’ll be able to take advantage of this website to take a break from your busy lives and rest your brain while having some fun! Our team is so excited for you to enjoy a nostalgic trip down game history to play classic titles such as Snake, Flappy Bird, and Pong. See if you can make the top score chart!</p> 
       <h3>Creators</h3>
       <p>Tim Sanders, Johnny Lieu, Aaron Platt, Matthew Rogers, Clyde Baron Rapinan</p>
 
