I added some html

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
         </label>
       </div>
       <div id="user-login">
-        <input type="submit" class="btn btn-primary submit-btn" value="Submit" form="create-user">
+        <input type="submit" class="btn btn-primary submit-btn" value="Login" form="create-user">
       </div>
     </form>
     <div id="user-login">
