--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -2,7 +2,7 @@
     <div class="main-card">
     <h1 class="main-title">WELCOME TO COBRA ARCADE!</h1>
     <h2 class="main-title">SIGN UP BELOW</h2>
-    <form id="create-user" method="POST" action="/games">
+    <form id="create-user" method="POST" action="/createUser">
       <div class="form-group" id="user-login">
         <label for="userName">Username</label>
         <input name="userName" type="username" class="form-control login-field" placeholder="Enter username" id="username">
