--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -2,7 +2,7 @@
   <div class="main-card">
     <h1 class="main-title">WELCOME TO COBRA ARCADE!</h1>
     <h2 class="main-title">SIGN UP BELOW</h2>
-    <div id="create-user">
+    <form id="create-user">
       <div class="form-group" id="user-login">
         <label for="userName">Username</label>
         <input name="userName" type="username" class="form-control login-field" placeholder="Enter username"
@@ -16,7 +16,7 @@
       <div id="user-login">
         <button class="btn btn-primary submit-btn">Submit</button>
       </div>
-    </div>
+    </form>
   </div>
 </div>
 <script>
