commented out console logs

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,7 +43,7 @@
       event.preventDefault();
       const u = $("#username").val();
       const p = $("#pwd").val();
-      console.log(u, p);
+      {{!-- console.log(u, p); --}}
       $.post("/verifyUser", { userName: u, password: p }, function (responce) {
         if (responce.indexOf("/")===-1) {
           alert(responce);
